<resources>
    <string name="app_name">CameraXPlay</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="flash_turn_on">Turn On</string>
    <string name="flash_turn_off">Turn Off</string>
    <string name="flash">Flash</string>
    <string name="resolution_HD">HD</string>
    <string name="resolution_SD">SD</string>
    <string name="resolution"></string>
</resources>