<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/camera_ui_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp">

        <ImageButton
            android:id="@+id/switchCameraButton"
            android:layout_width="@dimen/round_button_medium"
            android:layout_height="@dimen/round_button_medium"
            android:layout_marginStart="@dimen/margin_small"
            android:background="@android:color/transparent"
            android:contentDescription="@string/switch_camera_button_alt"
            android:padding="@dimen/spacing_small"
            android:scaleType="fitCenter"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_switch" />

        <ImageButton
            android:id="@+id/captureImageButton"
            android:layout_width="@dimen/round_button_large"
            android:layout_height="@dimen/round_button_large"
            android:background="@drawable/ic_shutter"
            android:contentDescription="@string/capture_button_alt"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/switchCameraButton"
            app:layout_constraintEnd_toStartOf="@id/recordVideoButton" />

        <ImageButton
            android:id="@+id/recordVideoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/record"
            android:contentDescription="@string/capture_button_alt"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ToggleButton
        android:id="@+id/switchResolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="12dp"
        android:textOn="@string/resolution_HD"
        android:textOff="@string/resolution_SD"
        android:checked="false"
        android:text="@string/resolution" />

    <ToggleButton
        android:id="@+id/onOffFlashlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="12dp"
        android:textOn="@string/flash_turn_off"
        android:textOff="@string/flash_turn_on"
        android:checked="false"
        android:text="@string/flash" />

</androidx.constraintlayout.widget.ConstraintLayout>